--- a/.github/workflows/release-reusable-publish-packages.yml
+++ b/.github/workflows/release-reusable-publish-packages.yml
@@ -14,10 +14,7 @@ on:
       package_type:
         description: Type of package to publish (deb or rpm)
         required: true
-        type: choice
-        options:
-          - 'deb'
-          - 'rpm'
+        type: string 
       aws_repo_base_path:
         description: Base S3 path for package repositories
         required: true
@@ -59,6 +56,12 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
+
+      - name: Validate package type
+        if: ${{ inputs.package_type != 'deb' && inputs.package_type != 'rpm' }}
+        run: |
+          echo "Error: package_type must be either 'deb' or 'rpm'"
+          exit 1
 
       - name: Validate inputs
         id: validate_inputs
