--- a/.github/workflows/release-reusable-publish-packages.yml
+++ b/.github/workflows/release-reusable-publish-packages.yml
@@ -210,10 +210,12 @@ jobs:
 
             # Create RPM macros file
             # TODO: original 2nd line of rpmmacros was %_gpg_path /home/polkadot/.gnupg and not %_gpg_path /home/nonroot/.gnupg
-            echo "Copying RPM macros file"
+            echo "Copying RPM macros file from: ${{ github.workspace }}/.github/workflows/rpmmacros"
             cp "${{ github.workspace }}/.github/workflows/rpmmacros" ~/.rpmmacros
             chmod 600 ~/.rpmmacros
-            
+            ls -la ~/.rpmmacros  # Debug: verify file exists and permissions
+            cat ~/.rpmmacros     # Debug: verify content
+
             rpm_filename=$(basename "$rpmname")
             echo "Signing RPM package: $rpm_filename"
 
