--- a/.github/workflows/release-reusable-publish-packages.yml
+++ b/.github/workflows/release-reusable-publish-packages.yml
@@ -222,11 +222,12 @@ jobs:
             echo "Signing RPM package: $rpm_filename"
 
             # Run inside podman with corrected permissions
+            # User changed to root:root from originally line like -v "/run/user/$(id -u)/gnupg/S.gpg-agent:/home/nonroot/.gnupg/S.gpg-agent"
             podman run \
                 -v "/run/user/$(id -u)/gnupg/S.gpg-agent:/home/nonroot/.gnupg/S.gpg-agent:ro" \
                 -v "${LOCAL_REPO_PATH}:/rpm:rw" \
                 -v "${TEMP_DIR}/rpmmacros:/etc/rpm/macros.sign:ro" \
-                --user root:root \  # Changed from $(id -u):$(id -g) to root:root
+                --user root:root \
                 --rm \
                 docker.io/paritytech/rpm \
                 /bin/bash -c '
