--- a/substrate/frame/society/Cargo.toml
+++ b/substrate/frame/society/Cargo.toml
@@ -28,9 +28,9 @@ sp-io.workspace = true
 sp-runtime.workspace = true
 
 [dev-dependencies]
-frame-support-test = { path = "../support/test" }
-pallet-balances = { default-features = true, path = "../balances" }
-sp-crypto-hashing = { default-features = true, path = "../../primitives/crypto/hashing" }
+frame-support-test = { workspace = true }
+pallet-balances = { workspace = true, default-features = true }
+sp-crypto-hashing = { workspace = true, default-features = true }
 
 [features]
 default = ["std"]
