--- a/.github/workflows/tests-misc.yml
+++ b/.github/workflows/tests-misc.yml
@@ -377,10 +377,10 @@ jobs:
           VERSION="0.3.0"
           ASSET_URL="https://github.com/paritytech/revive/releases/download/v$VERSION/resolc-universal-apple-darwin"
           echo "Downloading resolc v$VERSION from $ASSET_URL"
-          curl -Lsf --show-error -o /tmp/resolc "$ASSET_URL"
-          sudo cp /tmp/resolc /usr/local/bin/resolc
-          sudo chmod 755 /usr/local/bin/resolc
-          xattr -c /usr/local/bin/resolc
+          curl -Lsf --show-error -o $HOME/.cargo/bin/resolc "$ASSET_URL"
+          chmod +x $HOME/.cargo/bin/resolc
+          xattr -c $HOME/.cargo/bin/resolc
+          resolc --version
       - name: cargo info
         run: |
           echo "######## rustup show ########"
@@ -417,4 +417,5 @@ jobs:
           else
             echo '### Good job! All the required jobs passed 🚀' >> $GITHUB_STEP_SUMMARY
           fi
+
 
