Fix tests a little

--- a/polkadot/primitives/test-helpers/Cargo.toml
+++ b/polkadot/primitives/test-helpers/Cargo.toml
@@ -10,9 +10,14 @@ license.workspace = true
 workspace = true
 
 [dependencies]
+codec = { features = ["bit-vec", "derive"], workspace = true }
 polkadot-primitives = { features = ["test"], workspace = true, default-features = true }
 rand = { workspace = true, default-features = true }
+scale-info = { features = ["bit-vec", "derive", "serde"], workspace = true }
 sp-application-crypto = { workspace = true }
 sp-core = { features = ["std"], workspace = true, default-features = true }
 sp-keyring = { workspace = true, default-features = true }
 sp-runtime = { workspace = true, default-features = true }
+
+[dev-dependencies]
+bitvec = { features = ["alloc", "serde"], workspace = true }
