--- a/polkadot/primitives/test-helpers/Cargo.toml
+++ b/polkadot/primitives/test-helpers/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "polkadot-primitives-test-helpers"
-publish = false
 version = "1.0.0"
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
+description = "Test helpers for Polkadot runtime primitives"
+homepage.workspace = true
+repository.workspace = true
 
 [lints]
 workspace = true
