--- a/substrate/frame/revive/evm-tester/Cargo.toml
+++ b/substrate/frame/revive/evm-tester/Cargo.toml
@@ -15,18 +15,20 @@ clap = { features = ["derive"], workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 anyhow = { workspace = true }
+env_logger = { workspace = true }
 hex = { workspace = true }
 regex = { workspace = true }
 revm-statetest-types = "8.0"
 revm = { workspace = true }
 revive-dev-runtime = { workspace  = true }
 pallet-revive = { workspace = true }
+pallet-timestamp = { workspace = true }
 sp-io = { workspace = true }
 sp-storage = { workspace = true }
 sp-core = { workspace = true }
 frame-support = { workspace = true }
 frame-system = { workspace = true }
 pallet-balances = { workspace = true }
-
+sp-runtime = { workspace = true }
 
 
