--- a/substrate/frame/staking-async/runtimes/papi-tests/zn-s.toml
+++ b/substrate/frame/staking-async/runtimes/papi-tests/zn-s.toml
@@ -26,5 +26,5 @@ chain_spec_path = "./parachain.json"
 name = "charlie"
 rpc_port = 9946
 args = [
-	"-lruntime::system=debug,runtime::multiblock-election=trace,runtime::staking=debug,runtime::staking::rc-client=trace,runtime::rc-client=debug",
+	"-lruntime::system=debug,runtime::multiblock-election=trace,runtime::staking=debug,runtime::staking::rc-client=trace,runtime::rc-client=debug,xcm=trace,parachain-system=debug,runtime=info",
 ]
