--- a/.github/workflows/release-reusable-publish-packages.yml
+++ b/.github/workflows/release-reusable-publish-packages.yml
@@ -91,16 +91,13 @@ jobs:
             fetch_debian_package_from_s3 polkadot
           elif [[ "${{ inputs.package_type }}" == "rpm" ]]; then
             fetch_rpm_package_from_s3 polkadot
-          else
-            echo "Error: Unsupported package_type: ${{ inputs.package_type }}"
-            exit 1
           fi
 
       - name: Upload artifacts for later jobs
         uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3 # v4.3.1
         with:
           name: release-artifacts
-          path: release-artifacts/*
+          path: release-artifacts/polkadot/*.${{ inputs.package_type }}
 
   publish-package:
     runs-on: ubuntu-latest
