--- a/substrate/frame/revive/evm-tester/Cargo.toml
+++ b/substrate/frame/revive/evm-tester/Cargo.toml
@@ -24,6 +24,7 @@ revive-dev-runtime = { workspace  = true }
 pallet-revive = { workspace = true }
 pallet-timestamp = { workspace = true }
 sp-io = { workspace = true }
+sp-api = { workspace = true, default-features = true }
 sp-storage = { workspace = true }
 sp-core = { workspace = true }
 frame-support = { workspace = true }
