--- a/substrate/frame/multi-asset-bounties/Cargo.toml
+++ b/substrate/frame/multi-asset-bounties/Cargo.toml
@@ -30,6 +30,7 @@ sp-runtime = { workspace = true }
 [dev-dependencies]
 pallet-utility = { workspace = true, default-features = true }
 pallet-balances = { workspace = true, default-features = true }
+pallet-preimage = { workspace = true, default-features = true }
 
 [features]
 default = ["std"]
@@ -40,6 +41,7 @@ std = [
 	"frame-system/std",
 	"log/std",
 	"pallet-balances/std",
+	"pallet-preimage/std",
 	"scale-info/std",
 	"sp-core/std",
 	"sp-io/std",
@@ -50,11 +52,13 @@ runtime-benchmarks = [
 	"frame-support/runtime-benchmarks",
 	"frame-system/runtime-benchmarks",
 	"pallet-balances/runtime-benchmarks",
+	"pallet-preimage/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
 ]
 try-runtime = [
 	"frame-support/try-runtime",
 	"frame-system/try-runtime",
 	"pallet-balances/try-runtime",
+	"pallet-preimage/try-runtime",
 	"sp-runtime/try-runtime",
 ]
