--- a/cumulus/parachains/runtimes/collectives/collectives-westend/Cargo.toml
+++ b/cumulus/parachains/runtimes/collectives/collectives-westend/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "collectives-westend-runtime"
-version = "20.0.0"
+version = "20.0.1"
 authors.workspace = true
 edition.workspace = true
 license = "Apache-2.0"
@@ -86,8 +86,8 @@ xcm-runtime-apis.workspace = true
 xcm.workspace = true
 
 [dev-dependencies]
-parachains-runtimes-test-utils = { default-features = true, workspace = true }
-sp-io = { features = ["std"], default-features = true, workspace = true }
+parachains-runtimes-test-utils = { default-features = true, path = "../../test-utils" }
+sp-io = { features = ["std"], default-features = true, path = "../../../../../substrate/primitives/io" }
 
 [build-dependencies]
 substrate-wasm-builder = { optional = true, workspace = true, default-features = true }
