--- a/cumulus/parachains/runtimes/assets/asset-hub-rococo/Cargo.toml
+++ b/cumulus/parachains/runtimes/assets/asset-hub-rococo/Cargo.toml
@@ -90,8 +90,8 @@ xcm-runtime-apis.workspace = true
 xcm.workspace = true
 
 [dev-dependencies]
-asset-test-utils = { default-features = true, path = "../test-utils" }
-parachains-runtimes-test-utils = { default-features = true, path = "../../test-utils" }
+asset-test-utils = { default-features = true, workspace = true }
+parachains-runtimes-test-utils = { default-features = true, workspace = true }
 
 [build-dependencies]
 substrate-wasm-builder = { optional = true, workspace = true, default-features = true }
