--- a/cumulus/parachains/runtimes/collectives/collectives-westend/Cargo.toml
+++ b/cumulus/parachains/runtimes/collectives/collectives-westend/Cargo.toml
@@ -86,8 +86,8 @@ xcm-runtime-apis.workspace = true
 xcm.workspace = true
 
 [dev-dependencies]
-parachains-runtimes-test-utils = { default-features = true, path = "../../test-utils" }
-sp-io = { features = ["std"], default-features = true, path = "../../../../../substrate/primitives/io" }
+parachains-runtimes-test-utils = { default-features = true, workspace = true }
+sp-io = { features = ["std"], default-features = true, workspace = true }
 
 [build-dependencies]
 substrate-wasm-builder = { optional = true, workspace = true, default-features = true }
