--- a/polkadot/runtime/rococo/Cargo.toml
+++ b/polkadot/runtime/rococo/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rococo-runtime"
 build = "build.rs"
-version = "24.0.0"
+version = "24.0.1"
 description = "Rococo testnet Relay Chain runtime."
 authors.workspace = true
 edition.workspace = true
@@ -108,7 +108,7 @@ xcm.workspace = true
 remote-externalities = { default-features = true, workspace = true }
 serde_json = { workspace = true, default-features = true }
 sp-keyring = { default-features = true, workspace = true }
-sp-tracing = { workspace = true, default-features = false }
+sp-tracing = { default-features = false, workspace = true }
 tokio = { features = ["macros"], workspace = true, default-features = true }
 
 [build-dependencies]
