--- a/substrate/frame/society/Cargo.toml
+++ b/substrate/frame/society/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-society"
-version = "42.1.0"
+version = "42.2.0"
 authors.workspace = true
 edition.workspace = true
 license = "Apache-2.0"
@@ -29,8 +29,8 @@ sp-runtime.workspace = true
 
 [dev-dependencies]
 frame-support-test = { workspace = true }
-pallet-balances = { workspace = true, default-features = true }
-sp-crypto-hashing = { workspace = true, default-features = true }
+pallet-balances = { default-features = true, workspace = true }
+sp-crypto-hashing = { default-features = true, workspace = true }
 
 [features]
 default = ["std"]
