--- a/cumulus/parachains/runtimes/testing/yet-another-parachain/Cargo.toml
+++ b/cumulus/parachains/runtimes/testing/yet-another-parachain/Cargo.toml
@@ -75,3 +75,5 @@ runtime-benchmarks = [
 # deployment. This will disable stuff that shouldn't be part of the on-chain wasm
 # to make it smaller, like logging for example.
 on-chain-release-build = []
+
+fast-runtime = []
