chore: change subject path

--- a/.github/workflows/release-reusable-rc-build.yml
+++ b/.github/workflows/release-reusable-rc-build.yml
@@ -96,7 +96,7 @@ jobs:
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@e8998f949152b193b063cb0ec769d69d929409be # v2.4.0
         with:
-          subject-path: /artifacts/${{ matrix.binaries }}/${{ matrix.binaries }}
+          subject-path: ${{ env.ARTIFACTS_PATH }}/${{ matrix.binaries }}
 
       - name: Sign artifacts
         working-directory: /artifacts/${{ matrix.binaries }}
