Wait for all the jobs to finish before messaging

--- a/.github/workflows/release-30_publish_release_draft.yml
+++ b/.github/workflows/release-30_publish_release_draft.yml
@@ -263,7 +263,7 @@ jobs:
 
   post_to_matrix:
     runs-on: ubuntu-latest
-    needs: [ validate-inputs, publish-release-draft ]
+    needs: [ validate-inputs, publish-release-draft, publish-runtimes, publish-release-artifacts ]
     environment: release
     strategy:
       matrix:
